<resources>
    <string name="app_name" translatable="false">Quick Tournament Maker</string>
    <string name="title_activity_home">Create</string>
    <string name="quickStart">Quick start</string>
    <string name="randomSeed">Random seeding</string>
    <string name="tournamentTitle">Tournament title</string>
    <string name="tournamentDescription">Tournament description</string>
    <string name="numberOfPlayers">Number of players</string>
    <string name="numberOfPlayersHint">At least 3</string>
    <string name="numberOfPlayersSelected">Number of players selected: %1$d</string>
    <string name="participantDefaultName">Player %1$d</string>
    <string name="byeDefaultName" translatable="false">BYE</string>
    <string name="elimination">Elimination</string>
    <string name="doubleElimination">Double elimination</string>
    <string name="roundRobin">Round robin</string>
    <string name="swiss">Swiss</string>
    <string name="survival">Survival</string>
    <string name="numPlayersUnspecifiedMsg">Number of players unspecified</string>
    <string name="lessThan3Msg">A tournament requires at least 3 players</string>
    <string name="notANumberMsg">Not a number</string>
    <string name="roundHeader">Round %1$d</string>
    <string name="defaultTitle">My %1$s tournament (%2$s)</string>
    <string name="winnersBracket">Winners bracket</string>
    <string name="losersBracket">Losers bracket</string>
    <string name="finalsBracket">Finals bracket</string>
    <string name="roundTitleForDifferentRoundGroup" translatable="false">%2$s\n\t%1$s</string>
    <string name="roundSelectionHint">Alternatively, long click on a round header</string>
    <string name="matchUpSelectionHint">Alternatively, long click on a match up</string>
    <string name="participantSelectionHint">Alternatively, long click on a player</string>
    <string name="participant1VsParticipant2">%1$s VS %2$s</string>
    <string name="participantWithABye">%1$s has a BYE</string>
    <string name="participantVsNoOne">%1$s waiting for opponent</string>
    <string name="emptyMatchUp">Match up %1$d</string>
    <string name="title_activity_seeding">Custom seeding</string>
    <string name="seedHelpMsg">Tap 2 players to swap their positions</string>
    <string name="saveTournament">Save</string>
    <string name="currentRanking">Current ranking</string>
    <string name="saveAsTournament">Save as</string>
    <string name="exportTournamentAsImage">Export as image</string>
    <string name="editTournament">Edit tournament</string>
    <string name="moreInfo">More Info</string>
    <string name="rebuildTournament">Rebuild tournament</string>
    <string name="editARound">Edit a round</string>
    <string name="editAMatchUp">Edit a match up</string>
    <string name="editAParticipant">Edit a player</string>
    <string name="thisMatchUp">This match up</string>
    <string name="editingThisMatchUp">Editing match up</string>
    <string name="editingThisRound">Editing round</string>
    <string name="displayName">Display name</string>
    <string name="editPlayerDisplayNameHint">Originally %1$s</string>
    <string name="note">Note</string>
    <string name="displayedColor">Display color</string>
    <string name="editing">Editing %1$s</string>
    <string name="name">Name</string>
    <string name="group">Group</string>
    <string name="groupHint">Start typing for auto fill</string>
    <string name="adding">Adding</string>
    <string name="add">Add</string>
    <string name="addAndContinue">Add &amp; continue</string>
    <string name="move">Move</string>
    <string name="movingPlayers">Moving %1$d player(s)</string>
    <string name="movePlayerSuccessfulMsg">%1$d player(s) moved successfully</string>
    <string name="addSuccessfulMsg">%1$s added successfully</string>
    <string name="deletePlayerSuccessfulMsg">%1$d player(s) deleted successfully</string>
    <string name="editSuccessfulMsg">%1$s has been edited successfully</string>
    <string name="deleteGroupSuccessfulMsg">%1$d group(s) deleted successfully</string>
    <string name="title_activity_management">Management</string>
    <string name="duplicateMsg">%1$s already exists</string>
    <string name="defaultGroupName">Default group</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deletePlayerMsg">Are you sure you want to delete %1$d player(s)? This action cannot be undone.</string>
    <string name="deletingPlayers">Deleting %1$d player(s)</string>
    <string name="deleteGroupMsg">Are you sure you want to delete %1$d group(s)? This action cannot be undone.</string>
    <string name="deletingGroups">Deleting %1$d group(s)</string>
    <string-array name="colorOptionsNames">
        <item>Black</item>
        <item>Grey</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Purple</item>
    </string-array>
    <string name="rebuildTournamentInstructions">Rebuild this tournament as a different tournament type.\n*Any unsaved data will be lost.</string>
    <string name="customSeed">Custom seeding</string>
    <string name="sameSeed">Same seeding</string>
    <string name="knownRanking">Known ranking</string>
    <string name="unknownRanking">Unknown ranking</string>
    <string name="title_activity_directory_picker">Choose directory</string>
    <string name="directoryChoose">Choose \"%1$s\"</string>
    <string name="directoryCannotReadMsg">Could not read folder contents</string>
    <string name="exportAsImageProgressMsg">Exporting as image, please wait&#8230;</string>
    <string name="sdNotMounted">SD card not mounted</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="copyToClipboardMsg">Copied to clipboard</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="emailPickerTitle">Complete with&#8230;</string>
    <string name="noImageAppInstalledMsg">It seems like you do not have an app that can view an image file.  Please install one and try again.</string>
    <string name="exportAsImageSuccess">Successfully exported tournament as an image\n\n%1$s</string>
    <string name="exportAsImageFail">Failed to export tournament as an image\n\n%1$s</string>
    <string name="sort">Sort</string>
    <string name="viewMode">View mode</string>
    <string name="filter">Filter</string>
    <string name="deleteTournamentMsg">Are you sure you want to delete %1$d tournament(s)? This action cannot be undone.</string>
    <string name="saveTournamentSuccessfulMsg">Tournament saved successfully</string>
    <string name="title_activity_history">Load a tournament</string>
    <string name="load">Load</string>
    <string name="createdDateLabel">Created on: </string>
    <string name="lastModifiedDateLabel">Last modified: </string>
    <string name="deleteTournamentSuccessfulMsg">%1$d tournament(s) deleted successfully</string>
    <string name="creationTimeNewest">Creation time (newest)</string>
    <string name="creationTimeOldest">Creation time (oldest)</string>
    <string name="lastModifiedTimeNewest">Last modified time (newest)</string>
    <string name="lastModifiedTimeOldest">Last modified time (oldest)</string>
    <string name="nameReversed">Name (reversed)</string>
    <string name="tournamentType">Tournament type</string>
    <string name="tournamentTypeReversed">Tournament type (reversed)</string>
    <string name="progress">Least Progressed</string>
    <string name="progressReversed">Most Progressed</string>
    <string name="viewAsMinimal">Minimal (title only)</string>
    <string name="viewAsBasic">Basic (title &amp; description)</string>
    <string name="viewAsDetailed">Detailed</string>
    <string name="sortOptionsTitle">Sort by</string>
    <string name="searchHint">Search tournaments</string>
    <string name="clearSearch">Clear search results for \"%1$s\"</string>
    <string name="filtersApplied">Filters applied</string>
    <string name="historicalItemHintMsg">Tap and hold on an item for more options</string>
    <string name="noResultsMsg">No results found</string>
    <string name="titleHeader">Title</string>
    <string name="typeInfo">Type: %1$s</string>
    <string name="seedType">Seed type</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="email">Email</string>
    <string name="title_activity_app_info">More information</string>
    <string name="eliminationInfoText">
        <![CDATA[A <b>single-elimination tournament</b>—also called an <b>Olympic system tournament</b>, a <b>knockout</b> (or, <b>knock-out</b>), <b>single penetration</b>, or <b>sudden death tournament</b>—is a type of elimination tournament where the loser of each bracket is immediately eliminated from winning the championship or first prize in the event.
        For more information, <a href="https://en.wikipedia.org/wiki/Single-elimination_tournament">see the Wikipedia entry</a>]]>
    </string>
    <string name="doubleEliminationInfoText">
        <![CDATA[A <b>double-elimination tournament</b> is a type of elimination tournament competition in which a participant ceases to be eligible to win the tournament\'s championship upon having lost two games or matches. It stands in contrast to a single-elimination tournament, in which only one defeat results in elimination.
        For more information, <a href="https://en.wikipedia.org/wiki/Double-elimination_tournament">see the Wikipedia entry</a>]]>
    </string>
    <string name="roundRobinInfoText">
        <![CDATA[A <b>round-robin tournament</b> (or <b>all-play-all tournament</b>) is a competition "in which each contestant meets all other contestants in turn". It contrasts with an elimination tournament.
        For more information, <a href="https://en.wikipedia.org/wiki/Round-robin_tournament">see the Wikipedia entry</a>]]>
    </string>
    <string name="swissInfoText">
        <![CDATA[A <b>Swiss-system tournament</b> is a non-eliminating tournament format which features a predetermined number of rounds of competition, but considerably fewer than in a round-robin tournament. In a Swiss tournament, each competitor (team or individual) does not play every other. Competitors meet one-to-one in each round and are paired using a predetermined set of rules designed to ensure that each competitor plays opponents with a similar running score, but not the same opponent more than once. The winner is the competitor with the highest aggregate points earned in all rounds. All competitors play in each round unless there is an odd number of them.
        For more information, <a href="https://en.wikipedia.org/wiki/Swiss-system_tournament">see the Wikipedia entry</a>]]>
    </string>
    <string name="survivalInfoText">
        <![CDATA[Based off of reality competition game shows which follow the format of non-tournament elimination contests. In many cases, participants are removed until only one person or team remains, who is then declared the winner. Usually this is done by eliminating participants one at a time (or sometimes two at a time, as an episodic twist due to the number of contestants involved and the length of a given season).
        For more information, <a href="https://en.wikipedia.org/wiki/Reality_television#Reality_competition.2Fgame_shows">see the Wikipedia entry on reality competition game shows</a>]]>
    </string>
    <string name="rankConfiguration">Ranking configuration</string>
    <string name="priority">Priority (Tap two to swap)</string>
    <string name="scoring">Scoring (Points based on record)</string>
    <string name="win">Win</string>
    <string name="tie">Tie</string>
    <string name="loss">Loss</string>
    <string name="exportTournamentAsFile">Export as file</string>
    <string name="startTournamentFromFile">Start tournament from file</string>
</resources>