<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:title="@string/searchHint"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_startTournamentFromFile"
        android:icon="@drawable/ic_start_tournament_from_file"
        android:title="@string/startTournamentFromFile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_viewAs"
        android:title="@string/viewMode"
        app:showAsAction="never" />
</menu>
