<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_sorting_options_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sortCreationTimeNewest_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creationTimeNewest"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/sortCreationTimeOldest_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creationTimeOldest" />

            <RadioButton
                android:id="@+id/sortLastModifiedTimeNewest_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastModifiedTimeNewest" />

            <RadioButton
                android:id="@+id/sortLastModifiedTimeOldest_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastModifiedTimeOldest" />

            <RadioButton
                android:id="@+id/sortName_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <RadioButton
                android:id="@+id/sortNameReversed_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameReversed" />

            <RadioButton
                android:id="@+id/sortTournamentType_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournamentType" />

            <RadioButton
                android:id="@+id/sortTournamentTypeReversed_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournamentTypeReversed" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>