<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AppInfoActivity"
    tools:showIn="@layout/activity_app_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elimination"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/eliminationInfoText_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_gap"
            android:text="@string/eliminationInfoText"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/doubleEliminationHeader_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/more_info_gap"
            android:text="@string/doubleElimination"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/doubleEliminationInfoText_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_gap"
            android:text="@string/doubleEliminationInfoText"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/roundRobinHeader_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/more_info_gap"
            android:text="@string/roundRobin"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/roundRobinInfoText_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_gap"
            android:text="@string/roundRobinInfoText"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/swissHeader_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/more_info_gap"
            android:text="@string/swiss"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/swissInfoText_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_gap"
            android:text="@string/swissInfoText"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/survivalHeader_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/more_info_gap"
            android:text="@string/survival"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/survivalInfoText_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_gap"
            android:text="@string/survivalInfoText"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
