<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
                name="vm"
                type="com.dgnt.quickTournamentMaker.ui.main.common.TournamentTypeEditorViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.dgnt.quickTournamentMaker.ui.layout.TitledLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:titleText="@string/tournamentType">

            <RadioGroup
                    android:id="@+id/tournamentType_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@={vm.tournamentType}">

                <RadioButton
                        android:id="@+id/elimination_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/elimination" />

                <RadioButton
                        android:id="@+id/doubleElimination_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/doubleElimination" />

                <RadioButton
                        android:id="@+id/roundRobin_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/roundRobin" />

                <RadioButton
                        android:id="@+id/swiss_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/swiss" />

                <RadioButton
                        android:id="@+id/survival_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/survival" />

            </RadioGroup>

        </com.dgnt.quickTournamentMaker.ui.layout.TitledLinearLayout>

        <com.dgnt.quickTournamentMaker.ui.layout.TitledLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/standard_gap"
                android:visibility="@{vm.showRankConfig ? View.VISIBLE : View.GONE}"
                app:helpText="@{vm.rankConfigHelpMsg}"
                app:titleText="@string/rankConfiguration">

            <RadioGroup
                    android:id="@+id/rankingConfig_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@={vm.rankConfig}">

                <RadioButton
                        android:id="@+id/compareRankFromPriority_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priority" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/priority_rv"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:layout_marginLeft="?android:attr/expandableListPreferredChildPaddingLeft"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="@{vm.showPriorityContent ? View.VISIBLE : View.GONE}"/>

                <RadioButton
                        android:id="@+id/compareRankFromScore_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scoring" />

                <LinearLayout
                        android:id="@+id/compareRankFromScoreGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="?android:attr/expandableListPreferredChildPaddingLeft"
                        android:orientation="horizontal"
                        android:visibility="@{vm.showScoringContent ? View.VISIBLE : View.GONE}">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/win"
                                android:textAppearance="?android:attr/textAppearanceMedium" />


                        <com.dgnt.quickTournamentMaker.ui.widget.MyNumberPicker
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:value="@={vm.winValue}" />
                    </LinearLayout>


                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/standard_gap">


                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/loss"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                        <com.dgnt.quickTournamentMaker.ui.widget.MyNumberPicker
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:value="@={vm.lossValue}" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/standard_gap">


                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/tie"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                        <com.dgnt.quickTournamentMaker.ui.widget.MyNumberPicker
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:value="@={vm.tieValue}" />


                    </LinearLayout>

                </LinearLayout>
            </RadioGroup>

        </com.dgnt.quickTournamentMaker.ui.layout.TitledLinearLayout>

        <com.dgnt.quickTournamentMaker.ui.layout.TitledLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/standard_gap"
                android:visibility="@{vm.showSeedType ? View.VISIBLE : View.GONE}"
                app:titleText="@string/seedType">


            <RadioGroup
                    android:id="@+id/seedOptions_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@={vm.seedType}">

                <RadioButton
                        android:id="@+id/randomSeed_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/randomSeed" />

                <RadioButton
                        android:id="@+id/customSeed_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customSeed" />

                <RadioButton
                        android:id="@+id/sameSeed_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sameSeed" />
            </RadioGroup>
        </com.dgnt.quickTournamentMaker.ui.layout.TitledLinearLayout>
    </LinearLayout>
</layout>