<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_groups_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_persons_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_group_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_person_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_persons_move"
        android:title="@string/move"
        android:icon="@drawable/ic_move"
        app:showAsAction="always"></item>
</menu>